--- a/main.css
+++ b/main.css
@@ -114,9 +114,9 @@ body {
   color: var(--darkgrey);
   cursor: pointer;
   margin-left: 8px;
-    transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
-#setting-btn :hover{
+#setting-btn :hover {
   color: var(--black);
 }
 .nav button {
@@ -131,7 +131,7 @@ body {
   transition: all 0.2s linear;
   opacity: 0;
 }
-.nav button.show{
+.nav button.show {
   opacity: 1;
 }
 .btn-1:hover {
@@ -156,6 +156,7 @@ body {
   flex-direction: column;
   overflow-x: scroll;
 }
+
 #meal-type {
   background-color: #f9f9f9;
   color: var(--grey);
@@ -172,9 +173,9 @@ body {
   height: 100%;
 }
 .list-item {
-  background-color: var(--white);
   display: flex;
   height: 90px;
+  max-width: 160px;
   margin: 1rem;
   border-radius: 6px;
   cursor: pointer;
@@ -183,37 +184,114 @@ body {
 }
 .list-item:hover {
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.329);
+  /* transform: translateX(5px); */
 }
-.list-item img {
-  width: 70%;
+.img-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  overflow: hidden;
+  max-width: 70px;
+}
+
+.item-info {
+  /* button */
+  position: absolute;
+  opacity: 0;
+  transition: all ease 0.2s;
+  background: none;
+  border: none;
+}
+.item-info a {
+  /* button */
+  text-decoration: none;
+  font-weight: 300;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.397);
+  color: var(--white);
+  border: 1.3px solid var(--white);
+  border-radius: 1px;
+}
+.item-img {
+  width: auto;
+  height: 100%;
   background-position: center;
-  object-fit: cover;
+}
+.list-item:hover .img-wrapper .item-info {
+  display: block;
+  opacity: 1;
 }
 .drag-icon {
+  /* card color */
   width: 35px;
-  background-color: var(--lightgrey);
+  background-color: rgba(233, 233, 233, 0.726);
   display: flex;
   justify-content: center;
   align-items: center;
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
-.drag-icon i {
+.list-item:hover .drag-icon {
+  /* card color */
+  background-color: rgba(240, 240, 240, 0.603);
+}
+#drag {
   color: rgb(133, 133, 133);
 }
-.content {
+#trash {
+  color: var(--orange);
+  display: none;
+  cursor: pointer;
+}
+
+.list-item:hover #trash {
+  display: block;
+}
+.list-item:hover #drag {
+  display: none;
+}
+.content-back {
+
+  display: none;
+  font-size: 0.2rem;
+}
+.list-item:hover .content-back {
+  /* card color */
   display: flex;
+  justify-content: space-evenly;
+  padding: 1rem 0;
+  background-color: rgba(240, 240, 240, 0.603);
+}
+.item-protein,
+.item-carbs,
+.item-fat {
+  font-size: 0.7rem;
+  font-weight: 300;
+}
+.content-back,
+.content-front {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  background-color: var(--lightgrey);
+  background-color: var(--white);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  width: 70px;
 }
-.content .title {
-  font-weight: 300;
+.content-front {
+  background: rgba(233, 233, 233, 0.726);
+  display: flex;
+}
+.list-item:hover .content-front {
+  display: none;
+}
+.content-front .item-title {
+  font-weight: 400;
   font-size: 0.7rem;
 }
-.content .calories {
-  color: var(--blue);
+.content-front .item-calories {
   font-size: 0.6rem;
   font-weight: 300;
   margin-top: 0.3rem;
