--- a/main.css
+++ b/main.css
@@ -177,6 +177,10 @@ body {
 .list {
   height: 100%;
 }
+.new-parent {
+  display: flex;
+  flex-direction: column;
+}
 .list-item {
   display: flex;
   height: 90px;
@@ -300,6 +304,23 @@ body {
 }
 .item-id {
   display: none;
+}
+
+.btn-load-more {
+  margin: 1rem auto 2rem auto;
+  padding: 5px;
+  background-color: var(--blue);
+  color: var(--white);
+  border-radius: 5px;
+  border: none;
+  width: 120px;
+  height: 50px;
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+.btn-load-more:hover {
+  box-shadow: 0px 0px 8px 2px rgba(27, 145, 115, 0.76);
 }
 /* TABLE */
 .table {
