--- a/main.css
+++ b/main.css
@@ -505,7 +505,7 @@ body {
   text-align: left;
   padding-left: 5rem;
   transform: translateY(100%);
-  word-wrap:break-word
+  word-wrap: break-word;
 }
 .slide-1 {
 }
@@ -555,7 +555,6 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   padding: 10% 10% 4% 10%;
-  ;
 }
 .style {
   background-color: var(--lightgrey);
@@ -567,7 +566,8 @@ body {
   color: var(--grey);
 }
 
-#form-container button , #submit-btn{
+#form-container button,
+#submit-btn {
   background-color: var(--red);
   color: white;
   width: 100%;
@@ -580,26 +580,38 @@ body {
   cursor: pointer;
 }
 
-#submit-btn{
+#submit-btn {
   margin-top: 20px;
-  background-color: var(--blue);;
-  
+  background-color: var(--blue);
 }
 .btn-wrap {
   display: flex;
   justify-content: space-evenly;
 }
 
-.radio-wrap{
+.radio-wrap {
   display: flex;
   align-items: center;
   justify-content: space-around;
   color: rgba(128, 128, 128, 0.493);
   font-size: 1.2rem;
 }
-span{
+span {
   margin-left: 0.5rem;
 }
-#form-title{
+#form-title {
   margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 1000px) {
+  body {
+    background-color: lightblue;
+  }
+  #slide-show {
+    display: none;
+  }
+  #form {
+    padding: 5%;
+    width: 70%;
+  }
 }
