--- a/main.css
+++ b/main.css
@@ -595,7 +595,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  color: var(--darkgrey);
+  color: grey;
   font-size: 1.2rem;
 }
 span {
