--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ body {
 }
 .btn-3:hover {
   color: var(--white);
-  background-color: var(--red);
+  background-color: var(--blue);
   border: var(--white);
 }
 /* LIST*/
@@ -388,8 +388,8 @@ body {
   justify-content: end;
   align-items: center;
 }
-#grocery-btn {
-  width: 200px;
+#grocery-btn{
+  width: 150px;
   height: 40px;
   margin-right: 2rem;
   border: none;
@@ -603,6 +603,22 @@ span {
 }
 #form-title {
   margin-bottom: 10px;
+}
+
+/* preloader */
+#preloader{
+  background-color: #fffafc;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#preloader img{
+  width: 30%;
+  height: 30%;
 }
 
 @media only screen and (max-width: 1000px) {
