--- a/main.css
+++ b/main.css
@@ -542,8 +542,8 @@ body {
   left: 0;
   position: fixed;
   background: white;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   text-align: center;
   opacity: 1;
@@ -556,7 +556,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  padding: 10% 10% 4% 10%;
+  padding: 0 10% 0 10%;
 }
 .style {
   background-color: var(--lightgrey);
