--- a/main.css
+++ b/main.css
@@ -82,6 +82,7 @@ body {
   border-radius: 15px;
   width: 100px;
   height: 60px;
+  margin: 5px;
 }
 .value-title {
   color: var(--darkgrey);
@@ -187,7 +188,7 @@ body {
   display: flex;
   height: 90px;
   max-width: 160px;
-  margin: 1rem;
+  margin: 10px;
   border-radius: 6px;
   cursor: pointer;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.192);
@@ -622,12 +623,77 @@ span {
 }
 
 @media only screen and (max-width: 1000px) {
-  #slide-show {
+
+  
+  .list-item{
+    align-self: center;
+  flex-direction: column;
+  width: 70px;
+  height: 100px;
+  }
+  .drag-icon{
+    width: 100%;
+    background-color: rgba(233, 233, 233, 0.726);
+  }
+  #drag{
     display: none;
   }
-  #form {
-    padding: 5%;
-    width: 70%;
+  #trash{
+    margin: 5px;
+  }
+  .item-img:hover{
+    opacity: 0;
+  }
+  .list-item:hover .img-wrapper .item-info{
+    display: none;
+    opacity: 0;
+  }
+  .content-front{
+    width: 100%;
+    height: 100%;
+  }
+  .img-wrapper{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     align-self: center;
+  }
+  .container{
+    grid-template-columns: 120px;
+  }
+  .img{
+    width: 150px;
+  }
+  .content-back:hover{
+    padding: 0;
+    height: 50px;
+  }
+
+  .old-parent{
+    align-self: center;
+  }
+  .day{
+    width: 70px;
+    margin: 1rem auto;
+  }
+  .lists{
+
+  }
+}
+
+
+
+@media only screen and (max-width: 800px) {
+  #slide-show {
+      display: none;
+    }
+    #form {
+      padding: 5%;
+      width: 70%;
+      align-self: center;
+    }
+  .container{
+    
   }
 }
