--- a/main.css
+++ b/main.css
@@ -21,9 +21,9 @@ body {
 .container {
   width: 100vw;
   height: 100vh;
-  padding: 0 30px;
+  padding: 0 10px;
   display: grid;
-  grid-column-gap: 20px;
+  grid-column-gap: 10px;
   grid-template-columns: 165px 550px 1.5fr;
   grid-template-rows: 0.8fr 2fr 0.4fr;
   grid-template-areas:
@@ -187,6 +187,7 @@ body {
   flex-direction: column;
 }
 .list-item {
+  align-self: center;
   display: flex;
   height: 90px;
   max-width: 150px;
